--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lodash": "~4.17.0",
     "webpack": "~4.43.0",
     "webpack-cli": "~3.3.11",
-    "html-loader": "^1.3.2"
+    "html-loader": "^1.3.2",
+    "socket.io": "~3.0.1"
   },
   "dependencies": {
     "xmlhttprequest": "^1.8.0"
