--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "webpack": "~4.43.0",
     "webpack-cli": "~3.3.11",
     "html-loader": "^1.3.2",
-    "socket.io": "~3.0.1"
+    "socket.io-client": "~1.3.3"
   },
   "dependencies": {
     "xmlhttprequest": "^1.8.0"
