--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "devDependencies": {
     "async": "~1.5.2",
-    "lodash": "~4.17.0",
-    "webpack": "~4.43.0",
-    "webpack-cli": "~3.3.11",
     "html-loader": "^1.3.2",
-    "socket.io-client": "~1.3.3"
+    "lodash": "~4.17.0",
+    "socket.io-client": "~3.0.1",
+    "webpack": "~4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "xmlhttprequest": "^1.8.0"
